# dairy

./: Cargo.toml  README.md  build.rs
.github/workflows/: build.yaml
benches/: create.rs  main.rs  maybe.rs
src/: as_ref.rs  cmp.rs  convert.rs  extend.rs  extent.rs  extra.rs  from.rs  from_iter.rs  from_str.rs  kinds.rs  lib.rs  sealed.rs  serde.rs  to_boxed.rs
src/from/: c_str.rs  os_str.rs  path.rs  slice.rs  str.rs
src/imp/: default.rs  mod.rs  orig.rs  sealed.rs
src/imp/better/: convert.rs  mod.rs
src/imp/compact/: convert.rs  extent.rs  mod.rs
src/kinds/: c_str.rs  cow.rs  os_str.rs  path.rs  slice.rs  str.rs
src/serde/: de.rs  mod.rs  ser.rs
tests/: c_str.rs  lib.rs  os_str.rs  path.rs  size.rs  slice.rs  str.rs
