[package]
name = "dairy"
version = "0.1.0"
authors = ["Ross MacArthur <ross@macarthur.io>"]
edition = "2018"
description = "A more compact, user friendly implementation of `Cow`."
readme = "README.md"
repository = "https://github.com/rossmacarthur/dairy"
license = "MIT OR Apache-2.0"
keywords = ["cow", "borrow", "str", "slice", "path"]
categories = ["memory-management"]

[dependencies]
serde = { version = "1.0", default-features = false, optional = true }

[features]
default = ["std"]
std = []
unix = ["std"]
