[package]
name = "dairy"
version = "0.1.1"
authors = ["Ross MacArthur <ross@macarthur.io>"]
edition = "2018"
description = "A more compact, user friendly clone-on-write smart pointer."
readme = "README.md"
repository = "https://github.com/rossmacarthur/dairy"
license = "MIT OR Apache-2.0"
keywords = ["cow", "borrow", "str", "slice", "path"]
categories = ["memory-management"]

[dependencies]
serde = { version = "1.0", default-features = false, optional = true }

[dev-dependencies]
# HACK: enable the `unix` feature for tests
# See https://github.com/rust-lang/cargo/issues/2911
_self = { package = "dairy", path = ".", features = ["unix"] }
beef = "0.5.0"
criterion = "0.3.4"

[features]
default = ["std"]
std = []
unix = ["std"]

[[bench]]
name = "main"
harness = false
