[package]
name = "dairy"
version = "0.2.2"
authors = ["Ross MacArthur <ross@macarthur.io>"]
edition = "2018"
description = "A more compact, user friendly clone-on-write smart pointer."
readme = "README.md"
repository = "https://github.com/rossmacarthur/dairy"
license = "MIT OR Apache-2.0"
keywords = ["cow", "borrow", "str", "slice", "path"]
categories = ["memory-management"]

[dependencies]
serde = { version = "1.0", default-features = false, optional = true }

[dev-dependencies]
beef = "0.5.0"
criterion = "0.3.4"

[features]
default = ["std"]
std = []

[[bench]]
name = "main"
harness = false
